EUTHEME-70-alt - Adding the wrapping div to templates, fixing regressions

--- a/css/style-sass-components.css
+++ b/css/style-sass-components.css
@@ -4533,15 +4533,16 @@ Style guide listing.3
 
 .listing--cta {
   color: #ffffff; }
-  .listing--cta .listing__item-link .listing__title {
-    color: #ffffff; }
   .listing--cta .listing__item {
     border: none;
-    background-color: #004494;
-    padding: 1.111em;
     margin: 1.111em 0; }
-    .listing--cta .listing__item:hover {
+    .listing--cta .listing__item:hover .listing__title,
+    .listing--cta .listing__item:hover a {
       text-decoration: underline; }
+    .listing--cta .listing__item .listing__item__wrapper,
+    .listing--cta .listing__item .node {
+      padding: 1.111em;
+      background-color: #004494; }
     .listing--cta .listing__item .listing__title,
     .listing--cta .listing__item a {
       color: #ffffff; }
@@ -4662,11 +4663,15 @@ a.listing__title {
     border-top: 1px solid #ececec; }
   .listing__item .listing__title,
   .listing__item .contextual-links-region {
+    color: #004494;
     position: static; }
   .listing__item:hover a .listing__title,
-  .listing__item:hover a.listing__title, .listing__item:active a .listing__title,
-  .listing__item:active a.listing__title, .listing__item:focus a .listing__title,
-  .listing__item:focus a.listing__title {
+  .listing__item:hover a.listing__title,
+  .listing__item:hover .listing__title, .listing__item:active a .listing__title,
+  .listing__item:active a.listing__title,
+  .listing__item:active .listing__title, .listing__item:focus a .listing__title,
+  .listing__item:focus a.listing__title,
+  .listing__item:focus .listing__title {
     text-decoration: underline; }
   .listing__item p {
     margin-bottom: 0; }
@@ -4693,11 +4698,9 @@ a.listing__title {
   width: 100%;
   height: 100%;
   z-index: 1; }
-  .listing__item-link:active, .listing__item-link:focus {
-    text-decoration: none; }
-    .listing__item-link:active .listing__title, .listing__item-link:focus .listing__title {
-      color: #404040;
-      text-decoration: underline; }
+  .listing__item-link:active .listing__title, .listing__item-link:focus .listing__title {
+    color: #404040;
+    text-decoration: underline; }
   .listing__item-link[href^="http"]:not(.is-internal):not([href*="ec.europa.eu"])::after {
     display: none !important; }
   .listing__item-link[href^="http"]:not(.is-internal):not([href*="ec.europa.eu"]) .listing__title,
